# shader1

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  LICENSE  README.md  s1-config.cmake.in
apps/examples/: CMakeLists.txt
apps/examples/qml_shader/: AssetBrowsingModel.cpp  AssetBrowsingModel.h  AssetBrowsingWidget.cpp  AssetBrowsingWidget.h  AssetBrowsingWidget.ui  CMakeLists.txt  CustomItemDataRole.h  ImageChooserWidget.cpp  ImageChooserWidget.h  ImageChooserWidget.ui  ImageLocation.cpp  ImageLocation.h  ImageView.qml  MainWindow.cpp  MainWindow.h  ShaderChooserWidget.cpp  ShaderChooserWidget.h  ShaderSource.cpp  ShaderSource.h  main.cpp  qml_shader.qrc
apps/examples/s1c_purec/: CMakeLists.txt  s1c.c
apps/s1c/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  OptimizationFlags.cpp  OptimizationFlags.h  s1c.cpp  s1c_latex.cpp
apps/tools/s1c/: CMakeLists.txt  s1c-config.h.in  s1c.cpp
doc/: CMakeLists.txt  cat.py  headerpp.py  pubapi-Doxyfile.in  pubapi-Doxyfile.inc  treelink.py
include/: CMakeLists.txt
include/base/: Object.h  UnicodeStream.h  UnicodeStreamEndOfInputException.h  UnicodeStreamException.h  common.h  hash_UnicodeString.h  make_shared.h  unordered_map  unordered_set
include/codegen/: CgGenerator.h  LatexGenerator.h  StringsArray.h
include/compiler/: Backend.h  Compiler.h  Options.h  Program.h
include/internal/: CMakeLists.txt  Diagnostics_components.txt
include/internal/base/: DebugMessageHandler.h  Exception.h  Library.h  LibraryObject.h  MultiOptional.h  Mutex.h  Object.h  Result.h  ResultCode_internal.h  UnicodeStream.h  UnicodeStreamEndOfInputException.h  UnicodeStreamException.h  UnicodeStreamInvalidCharacterException.h  bit_scan.h  boost_convert_spirit.hpp  common.h  config.h.in  dynamic_tls.h  intrusive_ptr.h  math_error_handler.h  nullopt.h  nullptr.h  outcome.h  std_hash.h  string_view.h
include/internal/codegen/: CgGenerator.h  StringsArray.h
include/internal/compiler/: Backend.h  BackendProgram.h  BackendProgramImpl.h  Compiler.h  Options.h  Program.h  ProgramDiagnostics.h
include/internal/diagnostics/: Diagnostics_defs.h.tpl  Diagnostics_fwd.h.tpl  Handler.h  common.h  forwarddecl.h
include/internal/lexer/: Diagnostics.xml  Lexer.h  LexerErrorHandler.h  Token.h  TokenLocation.h  TokenType.h
include/internal/optimize/: ConstantFolding.h  DeadCodeElimination.h  Inliner.h  Optimizer.h  UnusedFunctionArgumentRemoval.h
include/internal/parser/: AstBuilder.h  CommonSemanticsHandler.h  Diagnostics.xml  ErrorCode.h  ErrorHandler.h  Exception.h  (+2 more)
include/lexer/: Lexer.h  LexerErrorHandler.h
include/optimize/: ConstantFolding.h  Inliner.h  Optimizer.h
include/parser/: CommonSemanticsHandler.h  ErrorCode.h  ErrorHandler.h  Exception.h  Parser.h  ParserSemanticsHandler.h  SemanticsHandler.h
include/s1/: Backend.h  BackendOptions.h  ByteStream.h  CMakeLists.txt  CompiledProgram.h  DebugMessageHandler.h  Error.h  Library.h  LibraryObject.h  Options.h  Options_type.h  Program.h  ProgramDiagnostics.h  Ptr.h  ResultCode.h  ResultCode.inc.tpl  ResultCode.xml  ResultCode_backend.xml  ResultCode_base.xml  ResultCode_compileroptions.xml  ResultCode_components.txt  ResultCode_defs.h.tpl  ResultCode_defs_comp.h.tpl  ResultCode_program.xml  String.h  StringArg.h  cxxapi_detail.h  defs.h  fwd.h  s1config.h.in  warn_off.h  warn_on.h
include/s1_genObject/: Object.h.template
include/s1_pregenerated/: Object.h  preprocessor.h
include/splitter/: Frequency.h  ProgramSplitter.h  SequenceSplitter.h
include/t/: ApiByteStream.cpp  ApiByteStream.h  ApiByteStream_c++11.cpp  ApiByteStream_c++11.h  ApiLibrary.cpp  ApiLibraryObject.cpp  ApiLibraryObject.h  ApiObject.cpp  ApiResultCode.cpp  ApiResultCode.h  ApiString.cpp  ApiString.h
lib/: CMakeLists.txt
lib/API/: Backend.cpp  BackendOptions.cpp  ByteStream.cpp  ByteStream.h  CMakeLists.txt  CompiledProgram.cpp  CompiledProgram.h  DebugMessageHandler.cpp  Library.cpp  LibraryObject.cpp  Object.cpp  Options.cpp  Program.cpp  Program.h  ProgramDiagnostics.cpp  ResultCode.cpp.tpl  ResultCodeHelper.cpp  ResultCodeHelper.h  StringArg.h  StringObj.cpp  StringObj.h  StringWrapper.cpp  StringWrapper.h  cxxapi_detail.cpp  ld-symbols.map
lib/base/: CMakeLists.txt  DebugMessageHandler.cpp  Library.cpp  LibraryObject.cpp  Mutex.cpp  Object.cpp  PrintAssert.cpp  UnicodeStream.cpp  dynamic_tls.cpp  math_error_handler.cpp
lib/codegen/: CMakeLists.txt  CgGenerator.cpp  FunctionCodeGenerator.cpp  FunctionCodeGenerator.h  LatexGenerator.cpp  ProgramCodeGenerator.cpp  SequenceCodeGenerator.cpp  SequenceCodeGenerator.h  StringsArray.cpp
lib/compiler/: Backend.cpp  BackendCg.cpp  BackendCg.h  BackendGLSL.cpp  BackendGLSL.h  BackendLatex.cpp  BackendLatex.h  CMakeLists.txt  Compiler.cpp  DeprotectCtor.h  ErrorHandler.cpp  ErrorHandler.h  Options.cpp  Program.cpp  ProgramDiagnostics.cpp
lib/diagnostics/: CMakeLists.txt  DescriptionString.cpp.tpl  DescriptionString_comp.cpp.tpl  IdString.cpp.tpl  IdString_comp.cpp.tpl
lib/lexer/: CMakeLists.txt  Lexer.cpp
lib/optimize/: CMakeLists.txt  CloningHelper.cpp  CloningHelper.h  CommonSequenceVisitor.cpp  CommonSequenceVisitor.h  ConstantFolding.cpp  DeadCodeElimination.cpp  Inliner.cpp  OptimizeSequenceConstantFolding.cpp  OptimizeSequenceConstantFolding.h  OptimizeSequenceDeadCodeEliminate.cpp  OptimizeSequenceDeadCodeEliminate.h  OptimizeSequenceInlineBlocks.cpp  OptimizeSequenceInlineBlocks.h  OptimizeSequenceStep.h  Optimizer.cpp  ProgramOptimizations.cpp  ProgramOptimizations.h  SequenceOptimizations.cpp  SequenceOptimizations.h  UnusedFunctionArgumentRemoval.cpp
lib/parser/: AstBuilder.cpp  CMakeLists.txt  CommonSemanticsHandler.cpp  Parser.cpp
lib/s1/: Backend.cpp  CMakeLists.txt  CompiledProgram.cpp  Library.cpp  Object.cpp  Options.cpp  Program.cpp  Program.h
lib/semantics/: Attribute.cpp  CMakeLists.txt  CommonHandler.cpp  CommonScope.cpp  CommonSemanticsHandler.cpp  CommonType.cpp  Handler.cpp  Name.cpp  Scope.cpp  Type.cpp
lib/splitter/: CMakeLists.txt  ProgramSplitter.cpp  SequenceSplitter.cpp
(+491 files in other folders)
